# galaxies_datasets

./: .cookiecutter.json  .gitignore  CITATION.cff  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  LICENSE.rst  README.rst  noxfile.py  pyproject.toml
.github/workflows/: constraints.txt  release.yml  tests.yml
docs/: cli.rst  conf.py  datasets.md  index.rst  reference.rst  requirements.txt  usage.rst
src/galaxies_datasets/: __init__.py  __main__.py
src/galaxies_datasets/datasets/: __init__.py
src/galaxies_datasets/datasets/eagle/: checksums.tsv  eagle.py
src/galaxies_datasets/datasets/eagle/dummy_data/RefL0025N0376/27/: data.csv
src/galaxies_datasets/datasets/eagle/dummy_data/RefL0100N1504/27/: data.csv
src/galaxies_datasets/datasets/galaxy_zoo_2/: __init__.py  checksums.tsv  galaxy_zoo_2.py  galaxy_zoo_2_test.py
src/galaxies_datasets/datasets/galaxy_zoo_2/dummy_data/galaxy_zoo_2/: gz2_filename_mapping.csv
src/galaxies_datasets/datasets/galaxy_zoo_3d/: __init__.py  checksums.tsv  galaxy_zoo_3d.py  galaxy_zoo_3d_test.py
src/galaxies_datasets/datasets/galaxy_zoo_challenge/: galaxy_zoo_challenge.py  galaxy_zoo_challenge_test.py
src/galaxies_datasets/datasets/galaxy_zoo_challenge/dummy_data/galaxy_zoo_challenge/: training_solutions_rev1.csv
src/galaxies_datasets/datasets/galaxy_zoo_decals/: __init__.py  checksums.tsv  galaxy_zoo_decals.py  galaxy_zoo_decals_test.py
src/galaxies_datasets/datasets/galaxy_zoo_decals/dummy_data/galaxy_zoo_decals/: gz_decals_auto_posteriors.csv
src/galaxies_datasets/datasets/gama/: __init__.py  gama.py  gama_test.py
src/galaxies_datasets/eagle/: __init__.py  eagle.py  eagle_test.py
src/galaxies_datasets/eagle/dummy_data/RecalL0025N0752/27/: data.csv
src/galaxies_datasets/eagle/dummy_data/RefL0025N0752/27/: data.csv
src/galaxies_datasets/galaxy_zoo_2/: __init__.py  galaxy_zoo_2.py  galaxy_zoo_2_test.py
src/galaxies_datasets/galaxy_zoo_2/dummy_data/galaxy_zoo_2/: gz2_hart16.csv
src/galaxies_datasets/galaxy_zoo_challenge/: __init__.py  checksums.tsv  galaxy_zoo_challenge.py  galaxy_zoo_challenge_test.py
src/galaxies_datasets/galaxy_zoo_decals/: __init__.py  galaxy_zoo_decals.py  galaxy_zoo_decals_test.py
src/galaxies_datasets/galaxy_zoo_decals/dummy_data/galaxy_zoo_decals/: gz_decals_volunteers_1_and_2.csv  gz_decals_volunteers_5.csv
src/galaxies_datasets/scripts/: __init__.py
src/galaxies_datasets/scripts/documentation/: __init__.py  build_catalog.py  dataset_template.md
src/galaxies_datasets/scripts/eagle/: __init__.py  download.py  table_query.sql
src/galaxies_datasets/scripts/galaxy_zoo_3d/: __init__.py  download.py
tests/: __init__.py  test_main.py
tests/scripts/documentation/: test_build_catalog.py
tests/scripts/eagle/: table_query_test.sql  test_download.py
