[tool.poetry]
name = "galaxies_datasets"
version = "0.1.2"
description = "Galaxies Datasets"
authors = ["Lucas Bignone <lbignone@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/lbignone/galaxies_datasets"
repository = "https://github.com/lbignone/galaxies_datasets"
documentation = "https://galaxies_datasets.readthedocs.io"
packages = [
    { include = "galaxies_datasets", from = "src" },
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.urls]
Changelog = "https://github.com/lbignone/galaxies_datasets/releases"

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0.0"
tensorflow-datasets = "^4.4.0"
pandas = "^1.3.2"
tensorflow = "^2.4.0"
eagleSqlTools = "^2.0.0"
typer = ">=0.4,<0.13"
Markdown = "3.3.4"

[tool.poetry.dev-dependencies]
pytest = "^7.4.4"
coverage = {extras = ["toml"], version = "^7.2"}
safety = "^2.3.4"
mypy = "^1.4"
typeguard = "^2.13.3"
xdoctest = {extras = ["colors"], version = "^1.1.5"}
sphinx = "^4.3.2"
sphinx-autobuild = "^2021.3.14"
pre-commit = "^2.21.0"
flake8 = "^5.0.4"
black = "^23.3.0"
flake8-bandit = "^4.1.1"
flake8-bugbear = "^23.3.12"
flake8-docstrings = "^1.7.0"
flake8-rst-docstrings = "^0.3.0"
pep8-naming = "^0.13.3"
darglint = "^1.8.1"
reorder-python-imports = "^3.10.0"
pre-commit-hooks = "^4.4.0"
sphinx-rtd-theme = "^1.3.0"
sphinx-click = "^4.4.0"
Pygments = "^2.17.2"
myst-parser = "^0.18.0"

[tool.poetry.scripts]
galaxies_datasets = "galaxies_datasets.__main__:app"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["galaxies_datasets"]

[tool.coverage.report]
show_missing = true
fail_under = 0

[tool.mypy]
strict = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
